# energizer

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  dev.yml  docs.yml  preview.yml
about/: index.html
api/acquisition_functions/: index.html
api/query_strategies/: index.html
api/trainer/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  contributing.md  index.md  installation.md  usage.md
docs/api/: acquisition_functions.md  query_strategies.md  trainer.md
docs/examples/: bert-agnews.ipynb  cnn-mnist.ipynb
docs/get-started/: energizer-in-2.md  implement-new-strategies.ipynb  index.md  installation.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
energizer/: __init__.py  acquisition_functions.py  data.py  enums.py  estimator.py  logging.py  loop.py  metrics.py  models.py  progress_trackers.py  registries.py  trackers.py  trainer.py  types.py
energizer/active_learning/: active_estimator.py  callbacks.py  clustering_utilities.py  data.py  estimator.py  progress_trackers.py  registries.py  strategies.py  trackers.py
energizer/active_learning/datastores/: base.py  classification.py  pandas.py
energizer/active_learning/strategies/: __init__.py  base.py  diversity.py  hybrid.py  random.py  two_stage.py  uncertainty.py
energizer/callbacks/: __init__.py  base.py  callbacks.py  early_stopping.py  grad_norm.py  grad_stats.py  lr_monitor.py  model_checkpoint.py  pytorch_profiler.py  timer.py  tqdm_progress.py
energizer/coreset_selection/: callbacks.py  trackers.py
energizer/coreset_selection/datastores/: base.py
energizer/coreset_selection/strategies/: base.py  diversity.py  random.py  training_dynamics.py
energizer/coresets/strategies/: base.py
energizer/data/: __init__.py  active_datamodule.py  active_dataset.py  datamodule.py  dataset.py
energizer/datastores/: __init__.py  _base_deprecated.py  base copy.py  base.py  classification.py  datamodule.py  language_modelling.py  mixins.py  pandas.py  seq2seq.py
energizer/estimators/: __init__.py  active_estimator.py  base_progress_trackers.py  estimator.py  progress_trackers.py  strategies.py
energizer/functional/: __init__.py
energizer/inference/: __init__.py  inference_modules.py  utils.py
energizer/learners/: _base.py  _hooks.py  base.py  hooks.py  utilities.py
energizer/loggers/: __init__.py  tensorboard.py  wandb.py
energizer/loops/: __init__.py  active_learning_loop.py  active_loop.py  pool_epoch_loop.py  pool_loop.py  pool_loops.py  topk_accumulator.py  utils.py
energizer/mixin/: _base.py  _hooks.py  base.py  hooks.py
energizer/query_strategies/: __init__.py  base.py  hooks.py  strategies.py
energizer/strategies/: __init__.py  base.py  functional.py  hooks.py  inference.py  random.py  strategies.py  uncertainty.py  uncertainty_sampling.py  utilities.py
energizer/utilities/: __init__.py  clustering.py  connectors.py  learner_utils.py  learners.py  logger.py  logging.py  mcdropout.py  mcdropout_utils.py  model_helpers.py  model_summary.py  tensors.py  trainer.py  trainer_helpers.py  trainer_utils.py  type_converters.py  types.py
energizer_notebooks/: nb.ipynb
examples/: .early_stopping.jsonl  active_estimators.ipynb  bert-tiny_agnews.py  bert_badge.py  bert_entropy.py  bert_random.py  cnn_mnist.py  cnn_mnist_example.py  create_faiss_index.ipynb  datastores.ipynb  docarray.ipynb  estimators.ipynb  image_classification.ipynb  mnist.ipynb  nb.ipynb  script.py  text_classification.ipynb  transformers_agnews.py
installation/: index.html
notebooks/: a.py  mnist.ipynb  mnist_example.py  nb.ipynb  run.py
overrides/: main.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_energizer.py  utils.py
tests/data/: test_active_dataset.py
tests/unit/data/: test_datamodule.py  test_dataset.py
tests/unit/inference/: test_inference_modules.py  test_utils.py
tests/unit/mcdropout/: test_replacement.py
