[tool.poetry]
name = "energizer"
version = "0.1.0"
description = "Custom training loops"
authors = ["Pietro Lesci <pietrolesci@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "energizer" },
]

[tool.poetry.dependencies]
python = "^3.8"
lightning-fabric = "^2.0.6"
lightning-utilities = "^0.9.0"
transformers = "^4.31.0"
datasets = "^2.14.1"
torch-optimizer = "^0.3.0"
srsly = "^2.4.5"
hnswlib = {git = "https://github.com/nmslib/hnswlib.git"}
torch-tb-profiler = "^0.4.1"
tensorboard = "^2.12.0"
wandb = "^0.15.4"
pandas = "^2.0.3"
tabulate = "^0.9.0"
openpyxl = "^3.1.1"
tqdm = "^4.65.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
nbqa = "^1.6.1"
ipykernel = "^6.20.2"
ipywidgets = "7.7.1"
isort = "^5.11.4"
pytest = "^7.2.1"
nvitop = "^1.0.0"


[tool.black]
line-length = 120
skip-string-normalization = false
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
src = ["src", "test"]
target-version = "py38"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
