[build-system]
requires      = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name        = "energizer"
version     = "0.1.0"
description = "Custom training loops"
authors     = [ "Pietro Lesci <pietrolesci@outlook.com>" ]
license     = "Apache-2.0"
readme      = "README.md"
packages    = [ { include = "energizer" } ]

[tool.poetry.dependencies]
python            = ">=3.9,<3.13"
lightning         = "^2.1.0"
transformers      = "^4.34.0"
datasets          = "^2.14.5"
torch-optimizer   = "^0.3.0"
srsly             = "^2.4.8"
hnswlib           = { git = "https://github.com/nmslib/hnswlib.git" }
torch-tb-profiler = "^0.4.1"
tensorboard       = "^2.14.1"
tbparse           = "^0.0.7"
wandb             = "^0.15.4"
pandas            = "^2.1.1"
tabulate          = "^0.9.0"
openpyxl          = "^3.1.2"
tqdm              = "^4.66.1"
scikit-learn      = "^1.3.1"
bitsandbytes      = "^0.41.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
nbqa       = "^1.6.1"
ipykernel  = "^6.20.2"
ipywidgets = "7.7.1"
pytest     = "^7.2.1"
nvitop     = "^1.0.0"
ruff       = "^0.1.3"
torchfix   = "^0.1.1"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
".bzr",
".direnv",
".eggs",
".git",
".git-rewrite",
".hg",
".mypy_cache",
".nox",
".pants.d",
".pytype",
".ruff_cache",
".svn",
".tox",
".venv",
"__pypackages__",
"_build",
"buck-out",
"build",
"dist",
"node_modules",
"venv",
]

extend-include = [ "*.ipynb" ]

# Same as Black.
line-length = 120

# Assume Python 3.10
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = true


[tool.ruff.isort]
combine-as-imports      = true
split-on-trailing-comma = false


[tool.ruff.lint]
select = [
# pycodestyle
"E",
# Pyflakes
"F",
# pyupgrade
"UP",
# flake8-bugbear
"B",
# flake8-simplify
"SIM",
# isort
"I",
]
