[build-system]
requires      = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name        = "energizer"
version     = "0.2.0"
description = "Data selection in PyTorch"
authors     = [ "Pietro Lesci <pietrolesci@outlook.com>" ]
license     = "Apache-2.0"
readme      = "README.md"
packages    = [ { include = "energizer" } ]


[tool.poetry.dependencies]
python            = "^3.10"
torch             = "^2.2.1"
lightning         = "^2.2.1"
transformers      = "^4.38.2"
datasets          = "^2.18.0"
peft              = "^0.7.1"
torchmetrics      = "^1.3.1"
pandas            = "^2.2.1"
torch-optimizer   = "^0.3.0"
srsly             = "^2.4.8"
hnswlib           = { git = "https://github.com/nmslib/hnswlib.git" }
tensorboard       = "^2.16.2"
torch-tb-profiler = "^0.4.1"
tabulate          = "^0.9.0"
wandb             = "^0.15.4"
ruff              = "^0.3.0"
torchfix          = "^0.1.1"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
".bzr",
".direnv",
".eggs",
".git",
".git-rewrite",
".hg",
".mypy_cache",
".nox",
".pants.d",
".pytype",
".ruff_cache",
".svn",
".tox",
".venv",
"__pypackages__",
"_build",
"buck-out",
"build",
"dist",
"node_modules",
"venv",
]

extend-include = [ "*.ipynb" ]

# Same as Black.
line-length = 120

# Assume Python 3.10
target-version = "py310"


[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = true


[tool.ruff.lint]
select = [
# pycodestyle
"E",
# Pyflakes
"F",
# pyupgrade
"UP",
# flake8-bugbear
"B",
# flake8-simplify
"SIM",
# isort
"I",
]

ignore = [
# # Use `X | Y` for type annotations
# "UP007",
# # Logging statement uses f-string
# "G004",
# # Function definitions that include too many arguments (>5)
# "PLR0913",
# # Comparison to `True` should be `cond is True` or `if cond:`
# "E712",
# # blanket-type-ignore
# "PGH003",
# flake8 Indentation contains tabs (W191)
"W191",
]


# # Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# # select = ["E", "F"]
# select = [
# # pyflakes
# "F",
# # pycodestyle
# "E",
# "W",
# # flake8-2020
# "YTT",
# # flake8-bugbear
# "B",
# # flake8-quotes
# "Q",
# # flake8-debugger
# "T10",
# # flake8-gettext
# "INT",
# # pylint
# "PL",
# # misc lints
# "PIE",
# # flake8-pyi
# "PYI",
# # tidy imports
# "TID",
# # implicit string concatenation
# "ISC",
# # type-checking imports
# "TCH",
# # comprehensions
# "C4",
# # pygrep-hooks
# "PGH",
# # Ruff-specific rules
# "RUF",
# # flake8-bandit: exec-builtin
# "S102",
# # numpy-legacy-random
# "NPY002",
# # Perflint
# "PERF",
# # flynt
# "FLY",
# # flake8-logging-format
# "G",
# ]


# Allow autofix for all enabled rules (when `--fix`) is provided.
# fix = true
# fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
# unfixable = [  ]


[tool.ruff.lint.isort]
combine-as-imports      = true
split-on-trailing-comma = false


[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
